EDA rellenar categóricas y scikit SimpleImputer (sin aplicar estrategias most_frequent o constant)

--- a/Notebooks/01LimpiarDatos/01_Ale_RellenarCategoricas.ipynb
+++ b/Notebooks/01LimpiarDatos/01_Ale_RellenarCategoricas.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,13 +56,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import missingno as msno\n",
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from sklearn.impute import SimpleImputer"
    ]
   },
   {
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +110,7 @@
        "(16636, 27)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +561,7 @@
        "[16636 rows x 27 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +608,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +654,7 @@
        " 'CPI']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,7 +669,151 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Guardar dataset en csv"
+    "# Machine learning para rellenar NaN con predicciones"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SimpleImputer\n",
+    "https://scikit-learn.org/stable/modules/generated/sklearn.impute.SimpleImputer.html\n",
+    "\n",
+    "sklearn.impute.SimpleImputer\n",
+    "\n",
+    "class sklearn.impute.SimpleImputer(*, missing_values=nan, strategy='mean', fill_value=None, verbose='deprecated', copy=True, add_indicator=False, keep_empty_features=False)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Definición de SimpleImputer"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Imputador univariante para completar valores faltantes con estrategias simples.\n",
+    "\n",
+    "Reemplaza los valores faltantes usando una estadística descriptiva (por ejemplo, media, mediana o más frecuente) a lo largo de cada columna, o usando un valor constante."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categorical_columns = ['Disaster Subtype', 'Location', 'Origin', 'Associated Dis', 'Associated Dis2', 'OFDA Response', 'Appeal', 'Declaration', 'AID Contribution', 'Dis Mag Scale', 'CPI']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categorical_data = df[categorical_columns]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Calcular porcentaje de valores faltantes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "missingness_percentage = categorical_data.isnull().mean() * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                  Porcentaje de valores faltantes\n",
+      "Associated Dis2                         95.413561\n",
+      "AID Contribution                        95.335417\n",
+      "OFDA Response                           89.685020\n",
+      "Appeal                                  84.617697\n",
+      "Declaration                             79.905025\n",
+      "Associated Dis                          78.402260\n",
+      "Origin                                  75.444818\n",
+      "Disaster Subtype                        19.974754\n",
+      "Location                                10.886030\n",
+      "Dis Mag Scale                            7.333494\n",
+      "CPI                                      0.637172\n"
+     ]
+    }
+   ],
+   "source": [
+    "missingness_percentage_df = pd.DataFrame({'Porcentaje de valores faltantes': missingness_percentage})\n",
+    "missingness_percentage_df.sort_values(by='Porcentaje de valores faltantes', ascending=False, inplace=True)\n",
+    "print(missingness_percentage_df)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Elegir estrategia de imputación"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Según el porcentaje de faltantes y conocimiento del tema, seleccionar una estrategia adecuada para completar o reemplazar los valores faltantes en cada columna categórica."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Elección de estrategia: En este caso, se podría considerar 'most_frequent' o 'constante' para reemplazar los valores faltantes con el valor más frecuente en cada columna."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Solicitar ayuda a Gema para definir estrategia"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Aplicar la estrategia de imputación elegida:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### SimpleImputer con estrategia 'most_frequent'"
    ]
   },
   {
@@ -677,7 +822,75 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('../../Data/02ParaLimpiar/02desastres_fillna.csv', index=False, sep=';', encoding='utf-8')"
+    "imputer = SimpleImputer(strategy='most_frequent')  # Reemplazar con la estrategia elegida, si no es 'most_frequent'\n",
+    "imputed_data = pd.DataFrame(imputer.fit_transform(categorical_data), columns=categorical_columns)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### SimpleImputer con estrategia 'constant'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imputer = SimpleImputer(strategy='constant')  # Reemplazar con la estrategia elegida, si no es constant\n",
+    "imputed_data = pd.DataFrame(imputer.fit_transform(categorical_data), columns=categorical_columns)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Validar datos imputados"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Examinar los datos categóricos imputados para verificar que se hayan reemplazado los valores faltantes. Realizar más análisis o modelado utilizando el conjunto de datos imputado."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Otras técnicas de imputación disponibles en scikit-learn:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "KNNImputer o IterativeImputer, según requisitos específicos."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Guardar dataset en csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df.to_csv('../../Data/02ParaLimpiar/02desastres_fillna.csv', index=False, sep=';', encoding='utf-8')"
    ]
   },
   {
