Observaciones, estrategia de imputación y criterio de borrado/relleno. Otra opción para categóricas RandomForestClassifier

--- a/Notebooks/01LimpiarDatos/01_Ale_RellenarCategoricas.ipynb
+++ b/Notebooks/01LimpiarDatos/01_Ale_RellenarCategoricas.ipynb
@@ -21,8 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Criterio de borrado de columnas:\n",
-    "* Importante: En el caso de desastres naturales, a menos de que partiéramos de una situación 'apocalíptica', realmente no existe una cantidad sobredimensionada de eventos anuales."
+    "## Observaciones importantes"
    ]
   },
   {
@@ -30,11 +29,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Objetivos:\n",
+    "Al ser nuestro conjunto de datos sobre desastres naturales y al estar ciertas columnas representando atributos relacionados con desastres específicos, es posible que algunas columnas tengan valores faltantes debido a la ausencia de un desastre o la inexistencia de ciertos atributos en ciertos casos. En tales escenarios, puede ser apropiado tratar esos valores faltantes como significativos e introducir una nueva categoría para representar la ausencia o la naturaleza indefinida del atributo."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Propuestas para manejar estos casos y representar los valores faltantes como indefinidos:\n",
     "\n",
-    "* Determinar con qué tipo de valores rellenar los faltantes\n",
+    "+ Identificar las columnas categóricas que contienen valores faltantes que representan la ausencia o la naturaleza indefinida de ciertos atributos.\n",
+    "\n",
+    "+ Crear una nueva categoría o etiqueta para representar explícitamente los valores que faltan. Esta nueva categoría se puede denominar \"Undefined\" o \"Sin definir\", \"Not Applicable\" o \"No aplicable\", \"No Data\" o \"Sin datos\" o cualquier otra etiqueta que transmita adecuadamente la ausencia o la naturaleza indefinida del atributo.\n",
+    "\n",
+    "+ Reemplazar los valores faltantes en las columnas categóricas con la nueva categoría o etiqueta. Usar el método fillna() de pandas para realizar este reemplazo."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Criterio de borrado o relleno de columnas y valores de filas:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Determinar con qué tipo de valores rellenar los faltantes de cada columna\n",
+    "* Asegurarse de que el tipo de dato rellenado es acorde a las interdependencias de columnas\n",
     "* Probar cómo responde dataset tras fillna de valores faltantes\n",
-    "* Cuidado con reindexar columnas por separadas"
+    "* Cuidado con reindexar columnas por separado"
    ]
   },
   {
@@ -669,38 +697,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Machine learning para rellenar NaN con predicciones"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## SimpleImputer\n",
-    "https://scikit-learn.org/stable/modules/generated/sklearn.impute.SimpleImputer.html\n",
-    "\n",
-    "sklearn.impute.SimpleImputer\n",
-    "\n",
-    "class sklearn.impute.SimpleImputer(*, missing_values=nan, strategy='mean', fill_value=None, verbose='deprecated', copy=True, add_indicator=False, keep_empty_features=False)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Definición de SimpleImputer"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Imputador univariante para completar valores faltantes con estrategias simples.\n",
-    "\n",
-    "Reemplaza los valores faltantes usando una estadística descriptiva (por ejemplo, media, mediana o más frecuente) a lo largo de cada columna, o usando un valor constante."
+    "## Definición de variable categorical_columns"
    ]
   },
   {
@@ -726,7 +723,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Calcular porcentaje de valores faltantes"
+    "## Calcular porcentaje de valores faltantes"
    ]
   },
   {
@@ -773,6 +770,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Recomendable borrar las columnas críticas que tengan porcentaje de valores faltantes muy altos (por encima de 70%) si no se pueden rellenar con datos lógicos en función de la interdependencia entre columnas:\n",
+    "Associated Dis2                         95.413561\n",
+    "AID Contribution                        95.335417\n",
+    "OFDA Response                           89.685020\n",
+    "Appeal                                  84.617697\n",
+    "Declaration                             79.905025\n",
+    "Associated Dis                          78.402260\n",
+    "Origin                                  75.444818"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Machine learning para rellenar NaN con predicciones"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SimpleImputer\n",
+    "https://scikit-learn.org/stable/modules/generated/sklearn.impute.SimpleImputer.html\n",
+    "\n",
+    "sklearn.impute.SimpleImputer\n",
+    "\n",
+    "class sklearn.impute.SimpleImputer(*, missing_values=nan, strategy='mean', fill_value=None, verbose='deprecated', copy=True, add_indicator=False, keep_empty_features=False)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Definición de SimpleImputer"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Imputador univariante para completar valores faltantes con estrategias simples.\n",
+    "\n",
+    "Reemplaza los valores faltantes usando una estadística descriptiva (por ejemplo, media, mediana o más frecuente) a lo largo de cada columna, o usando un valor constante."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Elegir estrategia de imputación"
    ]
   },
@@ -790,14 +841,6 @@
    "metadata": {},
    "source": [
     "Elección de estrategia: En este caso, se podría considerar 'most_frequent' o 'constante' para reemplazar los valores faltantes con el valor más frecuente en cada columna."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Solicitar ayuda a Gema para definir estrategia"
    ]
   },
   {
@@ -873,7 +916,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "KNNImputer o IterativeImputer, según requisitos específicos."
+    "RandomForestClassifier, KNNImputer o IterativeImputer, según requisitos específicos."
    ]
   },
   {
