--- a/Notebooks/01LimpiarDatos/01_Ele_Analisis_Inicial.ipynb
+++ b/Notebooks/01LimpiarDatos/01_Ele_Analisis_Inicial.ipynb
@@ -25,7 +25,9 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import folium\n",
+    "from geopy.geocoders import Nominatim"
    ]
   },
   {
