--- a/Notebooks/01LimpiarDatos/01_Ale_ExploracionMissingno.ipynb
+++ b/Notebooks/01LimpiarDatos/01_Ale_ExploracionMissingno.ipynb
@@ -1345,6 +1345,166 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Resultados de porcentaje de valores faltantes:\n",
+    "(16636, 27)\n",
+    "<class 'pandas.core.frame.DataFrame'>\n",
+    "RangeIndex: 16636 entries, 0 to 16635\n",
+    "Data columns (total 27 columns):\n",
+    " #   Column             Non-Null Count  Dtype  \n",
+    "---  ------             --------------  -----  \n",
+    " 0   Dis No             16636 non-null  object \n",
+    " 1   Year               16636 non-null  int64  \n",
+    " 2   Seq                16636 non-null  int64  \n",
+    " 3   Disaster Subgroup  16636 non-null  object \n",
+    " 4   Disaster Type      16636 non-null  object \n",
+    " 5   Disaster Subtype   13313 non-null  object \n",
+    " 6   Country            16636 non-null  object \n",
+    " 7   ISO                16636 non-null  object \n",
+    " 8   Region             16636 non-null  object \n",
+    " 9   Continent          16636 non-null  object \n",
+    " 10  Location           14825 non-null  object \n",
+    " 11  Origin             4085 non-null   object \n",
+    " 12  Associated Dis     3593 non-null   object \n",
+    " 13  Associated Dis2    763 non-null    object \n",
+    " 14  OFDA Response      1716 non-null   object \n",
+    " 15  Appeal             2559 non-null   object \n",
+    " 16  Declaration        3343 non-null   object \n",
+    " 17  AID Contribution   776 non-null    float64\n",
+    " 18  Dis Mag Value      5064 non-null   float64\n",
+    " 19  Dis Mag Scale      15416 non-null  object \n",
+    "...\n",
+    " 25  End Month          15936 non-null  float64\n",
+    " 26  CPI                16530 non-null  object \n",
+    "dtypes: float64(4), int64(4), object(19)\n",
+    "memory usage: 3.4+ MB\n",
+    "Output is truncated. View as a scrollable element or open in a text editor. Adjust cell output settings...\n",
+    "Dis No\tYear\tSeq\tDisaster Subgroup\tDisaster Type\tDisaster Subtype\tCountry\tISO\tRegion\tContinent\t...\tAID Contribution\tDis Mag Value\tDis Mag Scale\tLatitude\tLongitude\tStart Year\tStart Month\tEnd Year\tEnd Month\tCPI\n",
+    "0\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\t...\tTrue\tTrue\tFalse\tTrue\tTrue\tFalse\tTrue\tFalse\tTrue\tFalse\n",
+    "1\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\t...\tTrue\tTrue\tFalse\tTrue\tTrue\tFalse\tTrue\tFalse\tTrue\tFalse\n",
+    "2\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\t...\tTrue\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\n",
+    "3\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\t...\tTrue\tTrue\tTrue\tTrue\tTrue\tFalse\tFalse\tFalse\tFalse\tFalse\n",
+    "4\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\t...\tTrue\tTrue\tTrue\tTrue\tTrue\tFalse\tFalse\tFalse\tFalse\tFalse\n",
+    "...\t...\t...\t...\t...\t...\t...\t...\t...\t...\t...\t...\t...\t...\t...\t...\t...\t...\t...\t...\t...\t...\n",
+    "16631\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\t...\tTrue\tTrue\tFalse\tTrue\tTrue\tFalse\tFalse\tFalse\tFalse\tTrue\n",
+    "16632\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\t...\tTrue\tTrue\tFalse\tTrue\tTrue\tFalse\tFalse\tFalse\tFalse\tTrue\n",
+    "16633\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\t...\tTrue\tTrue\tFalse\tTrue\tTrue\tFalse\tFalse\tFalse\tFalse\tTrue\n",
+    "16634\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\t...\tTrue\tTrue\tFalse\tTrue\tTrue\tFalse\tFalse\tFalse\tFalse\tTrue\n",
+    "16635\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\t...\tTrue\tTrue\tFalse\tTrue\tTrue\tFalse\tFalse\tFalse\tFalse\tTrue\n",
+    "16636 rows × 27 columns\n",
+    "\n",
+    "Dis No\tYear\tSeq\tDisaster Subgroup\tDisaster Type\tDisaster Subtype\tCountry\tISO\tRegion\tContinent\t...\tAID Contribution\tDis Mag Value\tDis Mag Scale\tLatitude\tLongitude\tStart Year\tStart Month\tEnd Year\tEnd Month\tCPI\n",
+    "0\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\t...\tTrue\tTrue\tFalse\tTrue\tTrue\tFalse\tTrue\tFalse\tTrue\tFalse\n",
+    "1\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\t...\tTrue\tTrue\tFalse\tTrue\tTrue\tFalse\tTrue\tFalse\tTrue\tFalse\n",
+    "2\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\t...\tTrue\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\n",
+    "3\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\t...\tTrue\tTrue\tTrue\tTrue\tTrue\tFalse\tFalse\tFalse\tFalse\tFalse\n",
+    "4\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\t...\tTrue\tTrue\tTrue\tTrue\tTrue\tFalse\tFalse\tFalse\tFalse\tFalse\n",
+    "...\t...\t...\t...\t...\t...\t...\t...\t...\t...\t...\t...\t...\t...\t...\t...\t...\t...\t...\t...\t...\t...\n",
+    "16631\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\t...\tTrue\tTrue\tFalse\tTrue\tTrue\tFalse\tFalse\tFalse\tFalse\tTrue\n",
+    "16632\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\t...\tTrue\tTrue\tFalse\tTrue\tTrue\tFalse\tFalse\tFalse\tFalse\tTrue\n",
+    "16633\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\t...\tTrue\tTrue\tFalse\tTrue\tTrue\tFalse\tFalse\tFalse\tFalse\tTrue\n",
+    "16634\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\t...\tTrue\tTrue\tFalse\tTrue\tTrue\tFalse\tFalse\tFalse\tFalse\tTrue\n",
+    "16635\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\tFalse\t...\tTrue\tTrue\tFalse\tTrue\tTrue\tFalse\tFalse\tFalse\tFalse\tTrue\n",
+    "16636 rows × 27 columns\n",
+    "\n",
+    "Dis No                   0\n",
+    "Year                     0\n",
+    "Seq                      0\n",
+    "Disaster Subgroup        0\n",
+    "Disaster Type            0\n",
+    "Disaster Subtype      3323\n",
+    "Country                  0\n",
+    "ISO                      0\n",
+    "Region                   0\n",
+    "Continent                0\n",
+    "Location              1811\n",
+    "Origin               12551\n",
+    "Associated Dis       13043\n",
+    "Associated Dis2      15873\n",
+    "OFDA Response        14920\n",
+    "Appeal               14077\n",
+    "Declaration          13293\n",
+    "AID Contribution     15860\n",
+    "Dis Mag Value        11572\n",
+    "Dis Mag Scale         1220\n",
+    "Latitude             13861\n",
+    "Longitude            13861\n",
+    "Start Year               0\n",
+    "Start Month            395\n",
+    "End Year                 0\n",
+    "End Month              700\n",
+    "CPI                    106\n",
+    "dtype: int64\n",
+    "Dis No                   0\n",
+    "Year                     0\n",
+    "Seq                      0\n",
+    "Disaster Subgroup        0\n",
+    "Disaster Type            0\n",
+    "Disaster Subtype      3323\n",
+    "Country                  0\n",
+    "ISO                      0\n",
+    "Region                   0\n",
+    "Continent                0\n",
+    "Location              1811\n",
+    "Origin               12551\n",
+    "Associated Dis       13043\n",
+    "Associated Dis2      15873\n",
+    "OFDA Response        14920\n",
+    "Appeal               14077\n",
+    "Declaration          13293\n",
+    "AID Contribution     15860\n",
+    "Dis Mag Value        11572\n",
+    "Dis Mag Scale         1220\n",
+    "Latitude             13861\n",
+    "Longitude            13861\n",
+    "Start Year               0\n",
+    "Start Month            395\n",
+    "End Year                 0\n",
+    "End Month              700\n",
+    "CPI                    106\n",
+    "dtype: int64\n",
+    "<Axes: >\n",
+    "\n",
+    "<Axes: >\n",
+    "\n",
+    "<Axes: >\n",
+    "\n",
+    "<Axes: >\n",
+    "\n",
+    "                   Porcentaje de faltantes\n",
+    "Associated Dis2                  95.413561\n",
+    "AID Contribution                 95.335417\n",
+    "OFDA Response                    89.685020\n",
+    "Appeal                           84.617697\n",
+    "Longitude                        83.319308\n",
+    "Latitude                         83.319308\n",
+    "Declaration                      79.905025\n",
+    "Associated Dis                   78.402260\n",
+    "Origin                           75.444818\n",
+    "Dis Mag Value                    69.559990\n",
+    "Disaster Subtype                 19.974754\n",
+    "Location                         10.886030\n",
+    "Dis Mag Scale                     7.333494\n",
+    "End Month                         4.207742\n",
+    "Start Month                       2.374369\n",
+    "CPI                               0.637172\n",
+    "Year                              0.000000\n",
+    "Continent                         0.000000\n",
+    "Region                            0.000000\n",
+    "ISO                               0.000000\n",
+    "Country                           0.000000\n",
+    "Disaster Type                     0.000000\n",
+    "Start Year                        0.000000\n",
+    "Disaster Subgroup                 0.000000\n",
+    "End Year                          0.000000\n",
+    "Seq                               0.000000\n",
+    "Dis No                            0.000000"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Conclusión"
    ]
   },
@@ -1389,6 +1549,15 @@
     "A partir de Location, identificar Latitude y Longitude, y viceversa en el caso de valores faltantes para Location.\n",
     "\n",
     "A las variables categóricas con valores faltantes, rellenarlas con 'undefined'."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Actualización 16/06:\n",
+    "A partir de este análisis, decidimos borrar más columnas, quedando un total de 20, prescindiendo de las relacionadas con Status Administrativo de gestión de desastre, Year y Associated Dis (1 y 2)"
    ]
   }
  ],
