Se adaptó a flood

--- a/Notebooks/01LimpiarDatos/01_Ale_EDAEarthquake.ipynb
+++ b/Notebooks/01LimpiarDatos/01_Ale_EDAEarthquake.ipynb
@@ -871,7 +871,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Categorías de condiciones asociadas al filtro Earhquake: geográficas, magnitud, geolocalización, temporales, etc."
+    "### Categorías de condiciones asociadas al filtro Earthquake: geográficas, magnitud, geolocalización, temporales, etc."
    ]
   },
   {
