Cambio Terremotos a Inundaciones en una palabra

--- a/Notebooks/01LimpiarDatos/01_Ale_EDAFloods.ipynb
+++ b/Notebooks/01LimpiarDatos/01_Ale_EDAFloods.ipynb
@@ -1365,7 +1365,7 @@
    "source": [
     "plt.figure(figsize=(10, 8))\n",
     "sns.barplot(x=top20_floods_countries.values, y=top20_floods_countries.index)\n",
-    "plt.title('Top 20 de Países con Más Terremotos')\n",
+    "plt.title('Top 20 de Países con Más Inundaciones')\n",
     "plt.xlabel('Conteo')\n",
     "plt.ylabel('País')\n",
     "plt.show()\n",
