--- a/Notebooks/01LimpiarDatos/01_Ele_drought.ipynb
+++ b/Notebooks/01LimpiarDatos/01_Ele_drought.ipynb
@@ -2661,12 +2661,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Continent\n",
+       "Africa       869596.0\n",
+       "Americas        266.0\n",
+       "Asia        9663477.0\n",
+       "Europe      1200002.0\n",
+       "Oceania         684.0\n",
+       "Name: Total Deaths, dtype: float64"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_drought.groupby('Continent')['Total Deaths'].sum()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
