archivo de eliminado de columnas

--- a/Notebooks/01LimpiarDatos/01_Ele_Dataset_definitivo.ipynb
+++ b/Notebooks/01LimpiarDatos/01_Ele_Dataset_definitivo.ipynb
@@ -375,6 +375,14 @@
    "source": [
     "df.to_csv('../../Data/02ParaLimpiar/02desastres_definitivo.csv', index=False, sep=';', encoding='utf-8')"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Falta el tratamiento de nulos en función de la necesidad de cada desastre\n"
+   ]
   }
  ],
  "metadata": {
