--- a/Notebooks/01LimpiarDatos/01_Ale_ReducirColumnas.ipynb
+++ b/Notebooks/01LimpiarDatos/01_Ale_ReducirColumnas.ipynb
@@ -613,6 +613,7 @@
     "# Las siguientes de lvl3 human_impact y economic_impact se sacarían de dataset complementario:\n",
     "# num_lvl3_human_impact = ['Total Deaths', 'No Injured', 'No Affected', 'No Homeless', 'Total Affected']\n",
     "# num_lvl3_economic_impact = ['Reconstruction Costs', 'Reconstruction Costs Adj', 'Insured Damages', 'Insured Damages Adj', 'Total Damages', 'Total Damages Adj']\n",
+    "num_lvl3_impact = ['Total Deaths', 'Total Affected', 'Total Damages', 'Total Damages Adj'] # Se dejan solo las que no tienen tantos nulls\n",
     "# Faltan columnas (aquí se han puesto 43)"
    ]
   },
@@ -1160,7 +1161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.drop(columns=['Event Name', 'Disaster Group', 'Disaster Subsubtype', 'Glide', 'Local Time', 'Start Day', 'End Day', 'River Basin','Total Deaths', 'No Injured', 'No Affected', 'No Homeless', 'Total Affected', 'Reconstruction Costs', 'Reconstruction Costs Adj', 'Insured Damages', 'Insured Damages Adj', 'Total Damages', 'Total Damages Adj', 'Adm Level', 'Admin1 Code', 'Admin2 Code', 'Geo Locations', 'Associated Dis', 'Associated Dis2', 'OFDA Response', 'Appeal', 'Declaration', 'AID Contribution', 'Year'], inplace=True)"
+    "df.drop(columns=['Event Name', 'Disaster Group', 'Disaster Subsubtype', 'Glide', 'Local Time', 'River Basin', 'No Injured', 'No Affected', 'No Homeless', 'Reconstruction Costs', 'Reconstruction Costs Adj', 'Insured Damages', 'Insured Damages Adj', 'Adm Level', 'Admin1 Code', 'Admin2 Code', 'Geo Locations', 'Associated Dis', 'Associated Dis2', 'OFDA Response', 'Appeal', 'Declaration', 'AID Contribution', 'Year', 'CPI'], inplace=True)"
    ]
   },
   {
