--- a/Notebooks/01LimpiarDatos/01_Ele_Dataset_definitivo.ipynb
+++ b/Notebooks/01LimpiarDatos/01_Ele_Dataset_definitivo.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
        "[5 rows x 50 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
        "(16636, 50)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +312,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 16636 entries, 0 to 16635\n",
+      "Data columns (total 50 columns):\n",
+      " #   Column                    Non-Null Count  Dtype  \n",
+      "---  ------                    --------------  -----  \n",
+      " 0   Dis No                    16636 non-null  object \n",
+      " 1   Year                      16636 non-null  int64  \n",
+      " 2   Seq                       16636 non-null  int64  \n",
+      " 3   Glide                     1736 non-null   object \n",
+      " 4   Disaster Group            16636 non-null  object \n",
+      " 5   Disaster Subgroup         16636 non-null  object \n",
+      " 6   Disaster Type             16636 non-null  object \n",
+      " 7   Disaster Subtype          13313 non-null  object \n",
+      " 8   Disaster Subsubtype       1117 non-null   object \n",
+      " 9   Event Name                3969 non-null   object \n",
+      " 10  Country                   16636 non-null  object \n",
+      " 11  ISO                       16636 non-null  object \n",
+      " 12  Region                    16636 non-null  object \n",
+      " 13  Continent                 16636 non-null  object \n",
+      " 14  Location                  14825 non-null  object \n",
+      " 15  Origin                    4085 non-null   object \n",
+      " 16  Associated Dis            3593 non-null   object \n",
+      " 17  Associated Dis2           763 non-null    object \n",
+      " 18  OFDA Response             1716 non-null   object \n",
+      " 19  Appeal                    2559 non-null   object \n",
+      " 20  Declaration               3343 non-null   object \n",
+      " 21  AID Contribution          776 non-null    float64\n",
+      " 22  Dis Mag Value             5064 non-null   float64\n",
+      " 23  Dis Mag Scale             15416 non-null  object \n",
+      " 24  Latitude                  2775 non-null   object \n",
+      " 25  Longitude                 2775 non-null   object \n",
+      " 26  Local Time                1156 non-null   object \n",
+      " 27  River Basin               1336 non-null   object \n",
+      " 28  Start Year                16636 non-null  int64  \n",
+      " 29  Start Month               16241 non-null  float64\n",
+      " 30  Start Day                 13021 non-null  float64\n",
+      " 31  End Year                  16636 non-null  int64  \n",
+      " 32  End Month                 15936 non-null  float64\n",
+      " 33  End Day                   13105 non-null  float64\n",
+      " 34  Total Deaths              11838 non-null  float64\n",
+      " 35  No Injured                4147 non-null   float64\n",
+      " 36  No Affected               9673 non-null   float64\n",
+      " 37  No Homeless               2470 non-null   float64\n",
+      " 38  Total Affected            12143 non-null  float64\n",
+      " 39  Reconstruction Costs      38 non-null     float64\n",
+      " 40  Reconstruction Costs Adj  36 non-null     float64\n",
+      " 41  Insured Damages           1109 non-null   float64\n",
+      " 42  Insured Damages Adj       1109 non-null   float64\n",
+      " 43  Total Damages             5384 non-null   float64\n",
+      " 44  Total Damages Adj         5366 non-null   float64\n",
+      " 45  CPI                       16530 non-null  object \n",
+      " 46  Adm Level                 8475 non-null   object \n",
+      " 47  Admin1 Code               5030 non-null   object \n",
+      " 48  Admin2 Code               4248 non-null   object \n",
+      " 49  Geo Locations             8475 non-null   object \n",
+      "dtypes: float64(17), int64(4), object(29)\n",
+      "memory usage: 6.3+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +405,7 @@
        "(16636, 26)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +431,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
