--- a/Notebooks/01LimpiarDatos/01_Ele_Dataset_definitivo.ipynb
+++ b/Notebooks/01LimpiarDatos/01_Ele_Dataset_definitivo.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
        "[5 rows x 50 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
        "(16636, 50)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
        "(16636, 26)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +442,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Start Month'] = df['Start Month'].astype('Int64')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Start Day'] = df['Start Day'].astype('Int64')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['End Day'] =  df['End Day'].astype('Int64')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['End Month']  =  df['End Month'].astype('Int64')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 16636 entries, 0 to 16635\n",
+      "Data columns (total 26 columns):\n",
+      " #   Column             Non-Null Count  Dtype  \n",
+      "---  ------             --------------  -----  \n",
+      " 0   Dis No             16636 non-null  object \n",
+      " 1   Year               16636 non-null  int64  \n",
+      " 2   Seq                16636 non-null  int64  \n",
+      " 3   Disaster Subgroup  16636 non-null  object \n",
+      " 4   Disaster Type      16636 non-null  object \n",
+      " 5   Disaster Subtype   13313 non-null  object \n",
+      " 6   Country            16636 non-null  object \n",
+      " 7   ISO                16636 non-null  object \n",
+      " 8   Region             16636 non-null  object \n",
+      " 9   Continent          16636 non-null  object \n",
+      " 10  Location           14825 non-null  object \n",
+      " 11  Origin             4085 non-null   object \n",
+      " 12  Associated Dis     3593 non-null   object \n",
+      " 13  Dis Mag Value      5064 non-null   float64\n",
+      " 14  Dis Mag Scale      15416 non-null  object \n",
+      " 15  Latitude           2775 non-null   object \n",
+      " 16  Longitude          2775 non-null   object \n",
+      " 17  Start Year         16636 non-null  int64  \n",
+      " 18  Start Month        16241 non-null  Int64  \n",
+      " 19  Start Day          13021 non-null  Int64  \n",
+      " 20  End Year           16636 non-null  int64  \n",
+      " 21  End Month          15936 non-null  Int64  \n",
+      " 22  End Day            13105 non-null  Int64  \n",
+      " 23  Total Deaths       11838 non-null  float64\n",
+      " 24  Total Affected     12143 non-null  float64\n",
+      " 25  Total Damages Adj  5366 non-null   float64\n",
+      "dtypes: Int64(4), float64(4), int64(4), object(14)\n",
+      "memory usage: 3.4+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
